--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
         <version>3.4.0</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.example.springframework</groupId>
+    <groupId>com.domain.springframework</groupId>
     <artifactId>spring-microservice</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>spring-microservice</name>
